errori.txt
g++ -Wall -std=c++11 -c -o bin/main.o src/main.cpp
src/main.cpp:16:67: error: wrong number of template arguments (2, should be 1)
 std::reverse_iterator<std::_List_iterator<reply::Project *, void *> > it;
                                                                   ^
In file included from c:\mingw\include\c++\7.3.0\bits\stl_algobase.h:66:0,
                 from c:\mingw\include\c++\7.3.0\bits\char_traits.h:39,
                 from c:\mingw\include\c++\7.3.0\ios:40,
                 from c:\mingw\include\c++\7.3.0\ostream:38,
                 from c:\mingw\include\c++\7.3.0\iostream:39,
                 from src/main.cpp:1:
c:\mingw\include\c++\7.3.0\bits\stl_iterator_base_funcs.h:71:30: note: provided for 'template<class> struct std::_List_iterator'
   template <typename> struct _List_iterator;
                              ^~~~~~~~~~~~~~
src/main.cpp:16:69: error: template argument 1 is invalid
 std::reverse_iterator<std::_List_iterator<reply::Project *, void *> > it;
                                                                     ^
src/main.cpp: In function 'int main(int, char**)':
src/main.cpp:34:26: error: cannot convert 'std::__cxx11::list<reply::Project*>::reverse_iterator {aka std::reverse_iterator<std::_List_iterator<reply::Project*> >}' to 'int' in assignment
     it = projects.rbegin();
                          ^
src/main.cpp: In function 'void thread_f(std::__cxx11::list<reply::Project*>, std::__cxx11::list<reply::Package*>)':
src/main.cpp:54:13: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
         if(n>=projects.size()) {
            ~^~~~~~~~~~~~~~~~~
src/main.cpp:58:23: error: invalid type argument of unary '*' (have 'int')
         Project *p = *it;
                       ^~
make: *** [makefile:11: bin/main.o] Error 1
